--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,9 +1,9 @@
-name: CI/CD for Flask API
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -11,38 +11,34 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Updated to v3
+      uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2  # Updated to v2
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build Docker Image
+      run: docker build -t YOUR_DOCKERHUB_USERNAME/flask-api .
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@v2  # Updated to v2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-api:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/flask-api:latest
+    - name: Push Docker Image
+      run: docker push YOUR_DOCKERHUB_USERNAME/flask-api:latest
 
   deploy:
-    needs: build
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Updated to v3
+      uses: actions/checkout@v2
 
     - name: Set up kubectl
-      uses: azure/setup-kubectl@v2  # Updated to v2
-      with:
-        version: 'v1.20.0'
+      uses: Azure/setup-kubectl@v1
 
     - name: Deploy to Kubernetes
-      env:
-        KUBECONFIG: ${{ secrets.KUBE_CONFIG }}
       run: |
-        kubectl apply -f k8s/deployment.yaml  --validate=false
-        kubectl apply -f k8s/service.yaml --validate false
+        kubectl apply -f k8s/deployment.yaml --validate=false
+        kubectl apply -f k8s/service.yaml --validate=false
