--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build Docker Image
-      run: docker build -t YOUR_DOCKERHUB_USERNAME/flask-api .
+      run: docker build -t mongina/flask-api .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -26,7 +26,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Push Docker Image
-      run: docker push YOUR_DOCKERHUB_USERNAME/flask-api:latest
+      run: docker push mongina/flask-api:latest
 
   deploy:
     runs-on: ubuntu-latest
