--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -38,6 +38,14 @@ jobs:
     - name: Set up kubectl
       uses: Azure/setup-kubectl@v1
 
+    - name: Create kind cluster
+      run: |
+        kind create cluster --wait 60s
+
+    - name: Set KUBECONFIG for kind
+      run: |
+        echo "$(kind get kubeconfig --name="kind")" > $HOME/.kube/config
+
     - name: Deploy to Kubernetes
       run: |
         kubectl apply -f k8s/deployment.yaml --validate=false
